css selector - basic

--- a/css01.html
+++ b/css01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스타일 지정 방식</title>
+    <title>css1 - 스타일 지정 방식</title>
     <!-- 외부 스타일 : link 요소로 스타일의 문서를 외부 css 파일로 만들어 지정하는 방식 -->
     <link rel="stylesheet" href="common.css">
     <style>
