css background property style1

--- a/css05.html
+++ b/css05.html
@@ -32,6 +32,11 @@
     #bgi6 { background-size:100%; background-repeat: no-repeat; background-position: center center; border:30px solid rgba(255,10,5,0.4); background-clip: content-box; }
     #bgi7 { background-size:100%; background-repeat: no-repeat; background-position: center center; border:30px solid rgba(255,10,5,0.4); background-clip: content-box; background-origin: padding-box; }
     #bgi8 { background-repeat: no-repeat; background-size:cover; background-blend-mode:hard-light; }
+    #bgi9 { background-image: linear-gradient(red, yellow, blue); }
+    #bgi10 { background-image: conic-gradient(red, yellow, green); }
+    #bgi11 { background-image: radial-gradient(red, green, blue); }
+    /* 색 -> color picker */
+    /* 그라디언트 -> color zilla  */
     /* background-image:url("파일경로및이름")  - 배경이미지 지정 */
     /* background-image:none; - 배경이미지 없음 */
     /* background-size: px|%|cover(너비에맞게)|contain(높이에맞게) 단위로 -> 가로크기  세로크기  - 배경이미지 크기 */
@@ -71,6 +76,7 @@
         <div class="bgi" id="bgi8">배경이미지8</div>
         <div class="bgi" id="bgi9">배경이미지9</div>
         <div class="bgi" id="bgi10">배경이미지10</div>
+        <div class="bgi" id="bgi11">배경이미지11</div>
     </div>
 </body>
 </html>   
